--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: landing
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
+								<li><a href="https://www.youtube.com/watch?v=fJ9rUzIMcZQ" target="_blank" class="button special">Begin Song</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -17,10 +17,14 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2><br />
+									Is this the real life?</h2>
+								<p><br />
+									Is this just fantasy?
+									Caught in a landslide
+									No escape from reality
+									Open your eyes
+									Look up to the skies and see</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
@@ -34,23 +38,30 @@ layout: landing
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2><br />
+									I'm just a poor boy, I need no sympathy</h2>
+								<p>Because I'm easy come, easy go
+									A little high, little low
+									Anyway the wind blows, doesn't really matter to me, to me</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Mama, just killed a man<br />
+								</h2>
+								<p>Put a gun against his head
+									Pulled my trigger, now he's dead
+									Mama, life had just begun
+									But now I've gone and thrown it all away</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Mama, ooo<br />
+								</h2>
+								<p>Didn't mean to make you cry
+									If I'm not back again this time tomorrow
+									Carry on, carry on, as if nothing really matters</p>
 							</div>
 						</section>
 					</section>
@@ -59,34 +70,56 @@ layout: landing
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Too late, my time has come</h2>
+								<p>Sends shivers down my spine
+									Body's aching all the time</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Goodbye everybody I've got to go</h3>
+									<p>Gotta leave you all behind and face the truth
+										Mama, ooo (anyway the wind blows)
+										I don't want to die
+										I sometimes wish I'd never been born at all</p>
 								</li>
 								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>I see a little silhouetto of a man</h3>
+									<p>Scaramouch, scaramouch will you do the fandango
+										Thunderbolt and lightning very very frightening me
+										Gallileo, Gallileo,
+										Gallileo, Gallileo,
+										Gallileo Figaro - magnifico</p>
 								</li>
 								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>But I'm just a poor boy and nobody loves me</h3>
+									<p>He's just a poor boy from a poor family
+										Spare him his life from this monstrosity</p>
 								</li>
 								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Easy come easy go will you let me go</h3>
+									<p>Bismillah! No we will not let you go - let him go
+										Bismillah! We will not let you go - let him go
+										Bismillah! We will not let you go let me go
+										Will not let you go let me go (never)
+										Never let you go let me go
+										Never let me go ooo
+										No, no, no, no, no, no, no
+										Oh mama mia, mama mia, mama mia let me go
+										Beelzebub has a devil put aside for me
+										For me
+										For me</p>
 								</li>
 								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>So you think you can stone me and spit in my eye</h3>
+									<p>So you think you can love me and leave me to die
+										Oh baby, can't do this to me baby
+										Just gotta get out just gotta get right outta here</p>
 								</li>
 								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Ooh yeah, ooh yeah</h3>
+									<p>Nothing really matters
+										Anyone can see
+										Nothing really matters nothing really matters to me</p>
 								</li>
 							</ul>
 						</div>
@@ -96,11 +129,11 @@ layout: landing
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Anyway the wind blows</h2>
+								<p></p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
+								<li><a href="https://www.youtube.com/watch?v=fJ9rUzIMcZQ" target="_blank" class="button fit special">Begin Song</a></li>
 								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
