--- a/index.html
+++ b/index.html
@@ -1,140 +1,18 @@
----
-layout: landing
----
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>{{ site.title }}</h2>
-							<p>{{ site.description | markdownify }}</p>
-							<ul class="actions">
-								<li><a href="https://www.youtube.com/watch?v=fJ9rUzIMcZQ" target="_blank" class="button special">Begin Song</a></li>
-							</ul>
-						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
-					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2><br />
-									Is this the real life?</h2>
-								<p><br />
-									Is this just fantasy?
-									Caught in a landslide
-									No escape from reality
-									Open your eyes
-									Look up to the skies and see</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2><br />
-									I'm just a poor boy, I need no sympathy</h2>
-								<p>Because I'm easy come, easy go
-									A little high, little low
-									Anyway the wind blows, doesn't really matter to me, to me</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Mama, just killed a man<br />
-								</h2>
-								<p>Put a gun against his head
-									Pulled my trigger, now he's dead
-									Mama, life had just begun
-									But now I've gone and thrown it all away</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Mama, ooo<br />
-								</h2>
-								<p>Didn't mean to make you cry
-									If I'm not back again this time tomorrow
-									Carry on, carry on, as if nothing really matters</p>
-							</div>
-						</section>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Too late, my time has come</h2>
-								<p>Sends shivers down my spine
-									Body's aching all the time</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Goodbye everybody I've got to go</h3>
-									<p>Gotta leave you all behind and face the truth
-										Mama, ooo (anyway the wind blows)
-										I don't want to die
-										I sometimes wish I'd never been born at all</p>
-								</li>
-								<li class="icon fa-laptop">
-									<h3>I see a little silhouetto of a man</h3>
-									<p>Scaramouch, scaramouch will you do the fandango
-										Thunderbolt and lightning very very frightening me
-										Gallileo, Gallileo,
-										Gallileo, Gallileo,
-										Gallileo Figaro - magnifico</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>But I'm just a poor boy and nobody loves me</h3>
-									<p>He's just a poor boy from a poor family
-										Spare him his life from this monstrosity</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Easy come easy go will you let me go</h3>
-									<p>Bismillah! No we will not let you go - let him go
-										Bismillah! We will not let you go - let him go
-										Bismillah! We will not let you go let me go
-										Will not let you go let me go (never)
-										Never let you go let me go
-										Never let me go ooo
-										No, no, no, no, no, no, no
-										Oh mama mia, mama mia, mama mia let me go
-										Beelzebub has a devil put aside for me
-										For me
-										For me</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>So you think you can stone me and spit in my eye</h3>
-									<p>So you think you can love me and leave me to die
-										Oh baby, can't do this to me baby
-										Just gotta get out just gotta get right outta here</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Ooh yeah, ooh yeah</h3>
-									<p>Nothing really matters
-										Anyone can see
-										Nothing really matters nothing really matters to me</p>
-								</li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Anyway the wind blows</h2>
-								<p></p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="https://www.youtube.com/watch?v=fJ9rUzIMcZQ" target="_blank" class="button fit special">Begin Song</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul>
-						</div>
-					</section>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- <link rel="icon" type="image/svg+xml" href="https://usskiandsnowboard.org/sites/all/themes/ussa_common_themes/usskisnowboard_v1/favicon.ico" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hayes Ashby</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
+  </body>
+</html>
